--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,35 @@
     	<groupId>org.hamcrest</groupId>
     	<artifactId>hamcrest-all</artifactId>
     	<version>1.3</version>
-</dependency>
+    </dependency>
 
   </dependencies>
+
+<!-- source https://github.com/codecov/example-java-maven-->
+ <build>
+	<sourceDirectory>src/main/java</sourceDirectory>
+	<plugins>
+	  <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-compiler-plugin</artifactId>
+		<version>3.1</version>
+		<configuration>
+	         	<source>1.7</source>
+	 				<target>1.7</target>
+		</configuration>
+	</plugin>
+	<plugin>
+		<groupId>org.codehaus.mojo</groupId>
+		<artifactId>cobertura-maven-plugin</artifactId>
+		<version>2.7</version>
+		<configuration>
+			<formats>
+		        	<format>html</format>
+		 	        <format>xml</format>
+	         	</formats>
+			<check />
+		</configuration>
+	</plugin>
+		</plugins>
+</build>
 </project>
